--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -2,38 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
+    android:id="@+id/twTitle"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/twTitle">
+    android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/ivMovieImage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
 
-        android:layout_alignParentTop="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/ivMovieImage"
+        android:layout_alignParentTop="true"
         tools:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        tools:text="Rings"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_toRightOf="@+id/ivMovieImage"
         android:layout_toEndOf="@+id/ivMovieImage"
-        android:id="@+id/tvTitle"/>
+        android:layout_toRightOf="@+id/ivMovieImage"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        tools:text="Rings" />
 
     <TextView
+        android:id="@+id/tvOverView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="land Julia becomes worried about her boyfriend, Holt when he explores the dark urban legend of a mysterious videotape said to kill the watcher seven days after viewing. She sacrifices herself to save her boyfriend and in doing so makes a horrifying discovery: there is a movie within the movie that no one has ever seen before."
-        android:id="@+id/tvOverView"
-
         android:layout_below="@+id/tvTitle"
+
+        android:layout_toEndOf="@+id/ivMovieImage"
         android:layout_toRightOf="@+id/ivMovieImage"
-        android:layout_toEndOf="@+id/ivMovieImage"/>
+        tools:text="land Julia becomes worried about her boyfriend, Holt when he explores the dark urban legend of a mysterious videotape said to kill the watcher seven days after viewing. She sacrifices herself to save her boyfriend and in doing so makes a horrifying discovery: there is a movie within the movie that no one has ever seen before." />
 
 </RelativeLayout>
