--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -8,13 +8,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="javio.com.flickster.MovieActivity">
+    tools:context="javio.com.flickster.activities.MovieActivity">
 
     <ListView
+        android:id="@+id/lvMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:id="@+id/lvMovies" />
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
