Improved the user interface through styling and coloring.

--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -17,5 +17,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@android:color/black" />
+        android:background="@android:color/black"
+        android:dividerHeight="@dimen/movie_list_item_divider" />
 </RelativeLayout>
