--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="content_margin">3dp</dimen>
+    <dimen name="movie_title_margin">35dp</dimen>
+    <dimen name="movie_list_item_divider">20sp</dimen>
 </resources>
