--- a/app/src/main/res/layout/item_movie_image.xml
+++ b/app/src/main/res/layout/item_movie_image.xml
@@ -31,7 +31,8 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical" android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical" android:layout_width="wrap_content"
 android:layout_height="wrap_content" android:descendantFocusability="blocksDescendants">
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -42,13 +43,17 @@ android:layout_height="wrap_content" android:descendantFocusability="blocksDesce
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    tools:src="@mipmap/ic_launcher" />
+    tools:src="@mipmap/ic_launcher"
+    android:layout_margin="@dimen/content_margin"
+    android:scaleType="center"
+    android:cropToPadding="false"
+    android:adjustViewBounds="false" />
 <ImageButton
     android:id="@+id/playButton"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:layout_centerInParent="true"
     android:elevation="@android:dimen/dialog_min_width_major"
-    android:background="@android:drawable/ic_media_play"
+    android:background="@drawable/ic_movie_play_24dp"
     android:visibility="invisible" />
 </RelativeLayout>
